# cr

./: .gitignore  Cargo.toml  Makefile  config.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  user.rs
crates/idp/: Cargo.toml
crates/idp/src/: lib.rs
crates/migrations/: Cargo.toml
crates/migrations/migrations/: V1__initial.sql  V2__create_init_tables.sql  V3__create_user_role_relation.sql
crates/migrations/src/: migrations.rs
src/: lib.rs  main.rs
src/destructing/: example.rs  mod.rs
