[package]
name = "cistracun"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cistracun"
path = "src/main.rs"

[workspace]
members = [
    "crates/migrations"
]
#default-members = ["crates/server"]
resolver = "2"

[workspace.dependencies]
migrations = { path = "crates/migrations" }

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
reqwest-eventsource = "0.5.0"
futures-util = "0.3.30"
migrations = { workspace = true }
log = "0.4.20"
