[package]
name = "cistracun"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cistracun"
path = "src/main.rs"

[workspace]
members = [
    "crates/common",
    "crates/database",
    "crates/idp",
    "crates/migrations",
]
#default-members = ["crates/server"]
resolver = "2"

[workspace.dependencies]
common = { path = "crates/common" }
database = { path = "crates/database" }
idp = { path = "crates/idp" }
migrations = { path = "crates/migrations" }

[dependencies]
migrations = { workspace = true }
database = { workspace = true }
idp = { workspace = true }
common = { workspace = true }

tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
reqwest-eventsource = "0.5.0"
futures-util = "0.3.30"
log = "0.4.20"
thiserror = "1.0.57"
anyhow = "1.0.80"
env_logger = "0.11.2"
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
config = {version = "0.14.0", features = ["yaml"]}
actix-web = "4.5.1"
